# FastAPI-AuthWebService

./: .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
src/: config.py  crud.py  database.ini  database.py  init.sql  m1ain.py  main.py  models.py  schemas.py
