[tool.poetry]
name = "fastapi-authwebservice"
version = "0.1.0"
description = ""
authors = ["danilalabydindfsdf <labydin2605@mail.ru>"]
readme = "README.md"
packages = [{include = "fastapi_authwebservice"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.98.0"}
sqlalchemy = "^2.0.17"
psycopg2-binary = "^2.9.6"
python-multipart = "^0.0.6"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
